--- a/blocks/v2-footer/v2-footer.css
+++ b/blocks/v2-footer/v2-footer.css
@@ -1,3 +1,7 @@
+:root {
+  --border-color: #D0D0D0;
+}
+
 .v2-footer {
   background: var(--c-background-card);
 }
@@ -28,7 +32,7 @@
 
 .link-column h3 {
   font-weight: bold;
-  border-top: 1px solid #D0D0D0;
+  border-top: 1px solid var(--border-color);
   cursor: pointer;
   padding: 28px 16px;
   display: flex;
@@ -43,8 +47,6 @@
   transition: 300ms max-height ease;
   will-change: max-height;
   overflow: hidden;
-
-  /* when expanded, the actual size will be set in JS. */
   max-height: 0;
 }
 
@@ -76,7 +78,7 @@
 
 .seperator {
   height: 1px;
-  background-color: #D0D0D0;
+  background-color: var(--border-color);
   margin-top: 0;
   margin-bottom: 0;
 }
@@ -115,22 +117,42 @@
   padding-right: 8px;
 }
 
-.v2-footer .scroll-to-top {
-  display: none;
-  position: fixed;
+.v2-scroll-to-top {
+  background-color: var(--c-white);
+  border-radius: 50%;
+  border: 1px solid var(--c-grey-400);
   bottom: 20px;
+  box-shadow: 0 4px 70px 0 rgb(0 0 0 / 20%);
+  color: var(--c-main-black);
+  cursor: pointer;
+  display: none;
+  padding: 10px;
+  position: fixed;
   right: 30px;
   z-index: 99;
-  border: none;
-  background-color: var(--volvo-text-gray);
-  color: var(--c-white);
-  cursor: pointer;
-  border-radius: 10px;
-  padding: 12px 24px;
+}
+
+.v2-scroll-to-top:hover {
+  background-color: var(--c-grey-50);
+}
+
+.v2-scroll-to-top:active {
+  background-color: var(--c-grey-100);
+}
+
+.link-column:not(.expand) h3:focus,
+.link-column-content a:focus,
+.footer-bar a:focus,
+.v2-scroll-to-top:focus {
+  outline: 2px solid var(--light-border-focus);
+}
+
+.v2-scroll-to-top svg {
+  display: block;
 }
 
 /* desktop */
-@media screen and (min-width: 767px) {
+@media screen and (min-width: 1200px) {
   .v2-footer-links-wrapper,
   .copyright-wrapper {
     width: calc(var(--wrapper-width) - 100px);
@@ -145,6 +167,10 @@
     border-top: 0;
     padding: 0;
     cursor: initial;
+  }
+
+  .link-column:not(.expand) h3:hover {
+    background-color: transparent;
   }
 
   .link-column-wrapper {
