--- a/blocks/v2-images-grid/v2-images-grid.css
+++ b/blocks/v2-images-grid/v2-images-grid.css
@@ -41,17 +41,13 @@
 
 .v2-images-grid-title {
   font-family: var(--font-family-heading);
-  font-size: 2.4rem;
-  line-height: 125%;
+  font-size: var(--f-heading-5-font-size);
+  line-height: var(--f-heading-5-line-height);
   margin: 0;
 }
 
 .v2-images-grid-itemtext {
   padding: 24px;
-  font-family: var(--font-family-body);
-  font-size: 1.6rem;
-  line-height: 130%;
-  letter-spacing: 0.5px;
 }
 
 .v2-images-grid-itemtext p {
@@ -95,8 +91,9 @@
   }
 
   .v2-images-grid-title {
-    font-size: 3.2rem;
-    letter-spacing: 0.25px;
+    font-size: var(--f-heading-4-font-size);
+    line-height: var(--f-heading-4-line-height);
+    letter-spacing: var(--f-heading-4-letter-spacing);
   }
 }
 
