--- a/blocks/v2-stories-carousel/v2-stories-carousel.css
+++ b/blocks/v2-stories-carousel/v2-stories-carousel.css
@@ -45,7 +45,7 @@ main .section.v2-stories-carousel-container .v2-stories-carousel-wrapper {
   margin-left: calc(100% - var(--stories-carousel-img-width)/2);
 }
 
-.v2-stories-carousel-items:after {
+.v2-stories-carousel-items::after {
   content: '';
   display: block;
   flex: 0 0 calc(100% - var(--stories-carousel-img-width)/2);
@@ -128,7 +128,6 @@ ul.v2-stories-carousel-meta {
   margin-left: 8px;
   position: relative;
   top: 1px;
-  /* transition: margin-left 0.3s; */
   width: 16px;
 }
 
@@ -203,7 +202,7 @@ ul.v2-stories-carousel-meta {
     margin-left: calc(50% - var(--stories-carousel-img-width)/2);
   }
 
-  .v2-stories-carousel-items:after {
+  .v2-stories-carousel-items::after {
     flex-basis: calc(50% - var(--stories-carousel-img-width)/2);
   }
 
